# nunchuck-adapter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: button.h  joystick.h  mockedwiringpi.h  nunchuck.h  nunchuckdata.h  nunchuckdatasampler.h  nunchuckreader.h  nunchuckupdater.h  platformchecker.h  threeAxisAccelerometer.hpp  threeaxisaccelerometer.h
src/: main.cpp
